--- a/public/John Smith Assets/App.css
+++ b/public/John Smith Assets/App.css
@@ -1,7 +1,4 @@
-/* src/pages/HomePage.css */
-
-/* =============GOOGLE FONTS===================== */
-
+/*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 /*=============== VARIABLES CSS ===============*/
@@ -66,121 +63,95 @@
   }
 }
 
-
-
-
-
-
-
-
-
-/*========== BASE ==========*/
+/*=============== BASE ===============*/
 * {
-  padding: 0;
   margin: 0;
-  box-sizing: border;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-Body,
+body,
 button,
 input,
-textarea{
+textarea {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
 }
 
-Body{
+body {
   background-color: var(--body-color);
-  color:var(--text-color)
+  color: var(--text-color);
 }
 
-h1,h2,h3{
-color:var(--title-color);
-font-weight: var(--font-semi-bold);
+h1,
+h2,
+h3 {
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
 }
 
-ul{
-  list-style-type: none;
+ul {
+  list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-button{
+button {
   cursor: pointer;
   border: none;
   outline: none;
 }
 
-img{
+img {
   max-width: 100%;
+  height: auto;
 }
 
-
-
-
-
-
-
-/*========== RESUSABLE CLASSES ==========*/
-.section{
+/*=============== REUSABLE CSS CLASSES ===============*/
+.section {
   padding: 6rem 0 2rem;
 }
 
-.section_title{
+.section__title {
   font-size: var(--h1-font-size);
-  color:var(--title-color);
+  color: var(--title-color);
 }
 
-.section_subtitle{
+.section__subtitle {
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: 4rem;
 }
 
-.section_title,
-.section_subtitle{
+.section__title,
+.section__subtitle {
   text-align: center;
 }
 
-
-
-
-
-
-
-
-
-/*============ LAYOUT==============*/
-.container{
-  max-width:968px;
-  margin-left:auto;
+/*=============== LAYOUT ===============*/
+.container {
+  max-width: 968px;
+  margin-left: auto;
   margin-right: auto;
 }
 
-.grid{
+.grid {
   display: grid;
-  gap:1.5rem;
+  gap: 1.5rem;
 }
 
-
-
-
-
-
-
-/*============ BUTTONS ==============*/
-
-.button{
+/*=============== BUTTONS ===============*/
+.button {
   display: inline-block;
   background-color: var(--title-color);
-  color:var(--container-color);
-  padding: 1.25rem;
+  color: var(--container-color);
+  padding: 1.25rem 2rem;
   border-radius: 1rem;
   font-weight: var(--font-medium);
 }
@@ -189,20 +160,14 @@ img{
   background-color: var(--title-color-dark);
 }
 
-.button_icon {
+.button__icon {
   margin-left: var(--mb-0-5);
 }
 
-.button--flex{
-  display: inline-block;
+.button--flex {
+  display: inline-flex;
   align-items: center;
 }
-
-
-
-
-
-
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
@@ -221,15 +186,6 @@ img{
     height: 22px;
   }
 }
-
-
-
-
-
-
-
-
-
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
@@ -260,115 +216,3 @@ img{
     margin-right: var(--mb-1);
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* -------------Portfolio container------------ */
-.portfolio-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-  padding: 2rem;
-}
-
-/* -------------Portfolio card------------ */
-
-.portfolio-item {
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  /* aspect-ratio: 3/2; */
-  /* position: relative; */
-}
-.portfolio-item .project-title {
-  font-size: 1.5rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.portfolio-item .project-description {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  color: #1a1a1a;
-}
-
-.portfolio-item .project-techstack {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  color: #007bff;
-}
-
-.portfolio-item .project-techstack span {
-  font-weight: bold;
-  color: #333232;
-}
-.portfolio-item .project-link {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 3px;
-}
-
-.portfolio-item .project-github {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  background-color: #1e2022;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 3px;
-  margin-left: 0.5rem;
-}
-
-.portfolio-item .project-link:hover {
-  background-color: #0056b3;
-}
-
-.portfolio-item img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  transition: transform 0.3s ease-in-out;
-}
-
-.portfolio-item img:hover {
-  transform: scale(1.05); /* Increase scale on hover */
-}
-
-/* -------------------------------- */
