--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--container-color);
+    background-color: var(--body-color);
 }
 
 .nav {
@@ -31,13 +31,117 @@
     flex-direction: column;
     align-items: center;
     font-size: var(--small-font-size);
-    color:var(--title-color);
+    color: var(--title-color);
     font-weight: var(--font-medium);
     transition: 0.3s;
 }
 
 .nav__icon,
 .nav__toggle,
-.nav__close{
+.nav__close {
     display: none;
+}
+
+/* ===========Active link============ */
+.active-link,
+.nav__link:hover {
+    color: var(--title-color-dark)
+}
+
+
+
+
+
+
+
+
+
+
+/*=============== BREAKPOINTS ===============*/
+
+@media screen and (max-width: 768px) {
+
+    .header {
+        bottom: 0;
+        top: initial;
+    }
+
+    .nav {
+        height: var(--header-height);
+    }
+
+    .nav__menu {
+        width: 100%;
+        position: fixed;
+        bottom: -100%;
+        left: 0;
+        background-color: var(--body-color);
+        padding: 2rem 1.5rem 4rem;
+        box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 1.5rem 1.5rem 0 0;
+        transition: 0.3s;
+    }
+
+
+    /* =======Show menu========= */
+    .show-menu{
+        bottom: 0;
+    }
+
+
+
+    .nav__list {
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+        gap: 2rem;
+    }
+
+
+    .nav__icon {
+        font-size: 1.3rem;
+    }
+
+    .nav__close {
+        position: absolute;
+        right: 4rem;
+        bottom: 1rem;
+        font-size: 1.5rem;
+        cursor: pointer;
+        color: var(--title-color);
+    }
+
+    .nav__icon,
+    .nav__toggle,
+    .nav__close {
+        display: block;
+    }
+
+    .nav__close:hover {
+        color: var(--title-color-dark);
+    }
+
+    .nav__toggle{
+        font-size: 1.1rem;
+        cursor: pointer;
+    }
+
+
+}
+
+
+
+
+
+
+
+
+/* For small devices */
+@media screen and (max-width: 350px) {
+    .nav__menu {
+        padding: 2rem 0.25rem 4rem;
+    }
+    .nav__list {
+        column-gap: 0;
+    }
+
 }
