--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,13 +1,71 @@
-.home-page {
-  display: flex;
-  flex-direction: row;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.home__content {
+  grid-template-columns: 116px repeat(2, 1fr);
+  padding-top: 5.5rem;
+  column-gap: 2rem;
   align-items: center;
-  justify-content: center;
-  text-align: center;
+}
+
+
+.home__social {
+  display: grid;
+  grid-template-columns: max-content;
+  row-gap: 1rem;
+}
+
+.home__social-icon {
+  font-size: 1.25rem;
+  color: var(--title-color);
+} 
+
+.home__social-icon:hover{
+  color: var(--title-color-dark);
+  margin-bottom: var(--mb-0-25);
+}
+
+
+.home__title{
+  font-size: var(--big-font-size);
+}
+
+.home__subtitle{
+  position: relative;
+  font-size: var(--h3-font-size);
+  padding-left: 5.4rem;
+  font-weight: var(--font-normal);
+  margin-bottom: var(--mb-1);
+}
+
+.home__subtitle::before{
+  content: "";
+  display: inline-block;
+  width: 78px;
+  height: 1px;
+  left: 0;
+  background-color: var(--title-color);
+  position: absolute;
+  top: 50%;
+}
+
+
+
+
+
+
+.home__hand{
+  height: 38px;
+  width: 38px;
+  margin-left: 0.4rem;
+}
+
+
+.home__img {
+  background: url(../../assests/nakul_github.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 300px;
+  height: 300px;
+  box-shadow: inset 0 0 0 9px rgb(255, 255, 255 / 30%);
+  order: 1;
+  justify-self: center;
 }
