--- a/src/App.css
+++ b/src/App.css
@@ -132,19 +132,19 @@ img{
   padding: 6rem 0 2rem;
 }
 
-.section_title{
+.section__title{
   font-size: var(--h1-font-size);
   color:var(--title-color);
 }
 
-.section_subtitle{
+.section__subtitle{
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: 4rem;
 }
 
-.section_title,
-.section_subtitle{
+.section__title,
+.section__subtitle{
   text-align: center;
 }
 
@@ -315,86 +315,3 @@ img{
 
 
 
-
-
-
-
-
-
-/* -------------Portfolio container------------ */
-.portfolio-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-  padding: 2rem;
-}
-
-/* -------------Portfolio card------------ */
-
-.portfolio-item {
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  /* aspect-ratio: 3/2; */
-  /* position: relative; */
-}
-.portfolio-item .project-title {
-  font-size: 1.5rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.portfolio-item .project-description {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  color: #1a1a1a;
-}
-
-.portfolio-item .project-techstack {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  color: #007bff;
-}
-
-.portfolio-item .project-techstack span {
-  font-weight: bold;
-  color: #333232;
-}
-.portfolio-item .project-link {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 3px;
-}
-
-.portfolio-item .project-github {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  background-color: #1e2022;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 3px;
-  margin-left: 0.5rem;
-}
-
-.portfolio-item .project-link:hover {
-  background-color: #0056b3;
-}
-
-.portfolio-item img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  transition: transform 0.3s ease-in-out;
-}
-
-.portfolio-item img:hover {
-  transform: scale(1.05); /* Increase scale on hover */
-}
-
-/* -------------------------------- */
